# eigensdk-python

./: .dockerignore  .flake8  .gitignore  .readthedocs.yaml  Dockerfile  MANIFEST.ini  Makefile  README.md  docker-compose.yml  install-precommit  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.sh  todo
.github/workflows/: build.yml  ci.yml  lint.yml  publish.yml  test.yml
docs/: requirements.txt
docs/source/: advanced-examples.rst  chainio.rst  conf.py  crypto.rst  eigensdk.chainio.rst  eigensdk.crypto.rst  eigensdk.metrics.rst  eigensdk.nodeapi.rst  eigensdk.services.rst  eigensdk.types.rst  index.rst  metrics.rst  nodeapi.rst  performance.rst  quickstart.rst  security.rst  services.rst  troubleshooting.rst
eigenlayer-contracts/cache/: solidity-files-cache.json
eigensdk/: _types.py  types_.py  utils.py
eigensdk-python/crypto/bls/: attestation.py
eigensdk/chainio/: utils.py
eigensdk/chainio/chainio_utils/: utils.py
eigensdk/chainio/clients/: builder.py
eigensdk/chainio/txmgr/: txmanager.py
eigensdk/chainio/utils/: utils.py
eigensdk/contracts/: ABIs.py  __init__.py
eigensdk/contracts/ABI/: AVSDirectory.json  AllocationManager.json  BLSApkRegistry.json  DelegationManager.json  IERC20.json  IStrategy.json  OperatorStateRetriever.json  PermissionController.json  RegistryCoordinator.json  RewardsCoordinator.json  ServiceManagerBase.json  StakeRegistry.json  StrategyManager.json
eigensdk/contracts/ABIs/: RewardsCoordinator.json
eigensdk/crypto/: __init__.py
eigensdk/crypto/bls/: __init__.py  attestation.py  attestation_test.py
eigensdk/crypto/bn256/: utils.py
eigensdk/metrics/: eigenmetrics.py  metrics.py
eigensdk/nodeapi/: __init__.py  nodeapi.py  test_nodeapi.py
eigensdk_python/: utils.py
eigensdk_python/metrics/: eigenmetrics.py
eigensdk_python/nodeapi/: nodeapi.py
mcl/: README.md  __init__.py  builder.py  consts.py  hook.py  utils.py
mcl/structures/: Fp.py  Fp2.py  Fr.py  G1.py  G2.py  GT.py  base.py
scripts/: create_deploy_config.py  create_env.py  deploy.sh  deploy_and_test.sh  entrypoint.sh  get_contract_addresses.py  setup_anvil.sh  update_env.py
tests/: .env  .tmp  avsregistry_reader_test.py  avsregistry_writer_test.py  builder.py  config.py  elreader_test.py  elwriter_test.py  run_tests.py  sign_hashed_msg.py  test_utils.py
tests/chainio/: test_avs_reader.py  test_avs_writer.py  test_el_reader.py  test_el_writer.py
tests/config/: anvil.yaml  holesky.yaml
tests/crypto/: test_bls_aggregation.py  test_bls_attestation.py  test_bls_contract_signatures.py  test_bls_security_fixes.py
tests/elreader/: base.py  config.py  conftestreader.py  elreader.py  test_el_reader.py  txmanager.py
tests/elwriter/: test_el_writer.py
tests/keys/: aggregator.ecdsa.key.json  test.ecdsa.key.json
tests/public/: test_imports.py  test_no_chain.py
tests/signature/: OperatorStateRetriever.json  aggregationtest.py  blssigcalldata.py
tmp/: test.py
(+80 files in other folders)
