[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigensdk"
version = "0.1.0"
description = "A Python SDK for developing EigenLayer AVS. Originally developed by Abram Symons."
requires-python = ">=3.11"
authors = [
    {name = "Abram Symons", email = "abramsymons@gmail.com"},

]
maintainers = [
    {name = "Abram Symons", email = "abramsymons@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "mcl @ git+https://github.com/sadeghte/mcl-python.git",
    "web3",
    "python-dotenv==1.0.1",
    "fastapi",
    "pydantic",
    "uvicorn"
]

[project.urls]
Homepage = "https://github.com/zellular-xyz/eigensdk-python"

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
eigensdk = ["py.typed"]
"*" = ["*.json"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
